[package]
name = "conc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
crossbeam-channel = "0.5.2"
try-lock = "0.2.3"

[dev-dependencies]
rand = "0.8.5"
crossbeam-utils = "0.8.7"